Version 1.12 - NO NAME SET
-----------------------------
Core - General:
  - Remove old code that handles the 'id' REQUEST parameter
  - Remove all functionality for the module 'lang' parameter... silently ignore this parameter, for now

Core - Bug Reports:


Core - Installer:


CMSMailer:


CMSPrinting:


FileManager:


ImageManager:


MenuManager:


MicroTiny:


ModuleManager:


News:


Search:


ThemeManager:




Version 1.11.2 - Isabela 
-----------------------------
Core - General:
  - Minor fix to the en_US.nls file
  - Fixes issue with misspelled class name resulted in error when editing/adding content when sitedown was enabled
  - Fixes issue with {content_image urlonly=1 ...} and the assign param
  - Fixes to the RedirectToAdminTab stuff
  - Fixes thumbnail creation stuff to do some file extension checking
  - Missing button "View in English" in OneEleven theme
  - Minor adjustment to page template parsing to detect <head instead of <head>
  - Fixes to login and admin behavior if users admin theme (or default theme) cannot be found
  - Minor modification to smarty to handle closing blocks for block plugins in add/edit template/content
  - Fixed problem with forgotten password form in the OneEleven admin theme
  - Fixes {cms_selflink} to do nothing in an admin request
  - Fixes an error where custom admin lang strings were loaded from the wrong file (according to the docs)
  - Updated translations redirect_url tag documentation
  - Fix #8368 - Global Content Blocks: Additional editors reset on edit
  - Fixes permission problems single user selected as additional editor in GCB
  - Fixes problem with module Uninstall process not setting module uninstalled in certain state, even it should
  - Compressed all images in OneEleven theme (probably not needed in changelog)
  - $nls['locale'] fixes in language .nls files

MenuManager
  - Fixes minor expression issue wrt the show_all parameter in the breadcrumb action